--- a/fizzbuzz/fizzbuzz.html
+++ b/fizzbuzz/fizzbuzz.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div ng-app="fizzbuzz" ng-controller="fizzbuzzCtrl">
-        <h1 ng-click="increment()"> {{ display }} </h1>
+        <h1 ng-click="increment()"> {{ numClicks }} </h1>
     </div>
 </body>
 </html>
