--- a/simple-todos/simple-todos.html
+++ b/simple-todos/simple-todos.html
@@ -22,38 +22,64 @@
 
 <!-- Courses -->
 <template name="course">
-  <li>
-    <button class="delete">&times;</button>
-    <span class="text">{{text}}</span>
-      <ul>
-      {{ #each criteria }}
-        {{> critItem }}
-      {{/each      }}
-     </ul>
+  <table style="width:100%">
+  <tr>
+    <li>
+      <button class="delete">&times;</button>
+      <br>
+        <table style="font-weight: 900">
+          <tr>
+            <td style="width:30%">
+              <span class="text"> {{text}} </span>
+            </td>
+
+            <td style="width:30%">
+              <span class="text">
+                 Class Grade:
+              </span>
+            </td>
+            <td>
+              <span>  &nbsp; &nbsp; &nbsp; 100% </span>
+            </td>
+
+          </tr>
+        </table>
+
+        <ul>
+          {{ #each criteria }}
+            {{> critItem }}
+          {{/each      }}
+         </ul>
 
       <form class="new-criteria">
         &nbsp; &nbsp; &nbsp; &nbsp;
-        <input type="text" name="inputCriteria" class="inputCriteria" placeholder="Criteria Name" />
+      <input type="text" name="inputCriteria" class="inputCriteria" placeholder="Criteria Name" />
         &nbsp; &nbsp; &nbsp;
-        <input type="text" name="inputPercent"  class="inputCriteria" placeholder= "% of Grade"   />
-        <input type="submit" />
+      <input type="text" name="inputPercent"  class="inputCriteria" placeholder= "% of Grade"   />
+      <input type="submit">
       </form>
-  </li>
+    </li>
+  </tr>
+  </table>
 </template>
 
 
 <!-- Criteria -->
 
 <template name="critItem">
-  <li>
-    <button class="delete">&times;</button>
-    <span class="text"> &nbsp; &nbsp; {{this.text}}</span>
-    <span class="text">
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-    &nbsp; &nbsp;
-
-    Weight &nbsp; &nbsp; {{this.weight }}%  </span>
-  </li>
+  <table style="width:100%">
+    <tr>
+      <td style="width:31%">
+        <span class="text"> &nbsp; &nbsp; {{this.text}}</span>
+      </td>
+      <td style="width:25%">
+        <span class="text">
+        Weight &nbsp; &nbsp; {{this.weight }}%  </span>
+      </td>
+      <td style="width:20%">
+        <button class="delete" style="float:left">&times;</button>
+      </td>
+    </tr>
+  </table>
 </template>
 
